<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:custom="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/handy_bg"
    >

    <Button
        android:id="@+id/profile_update_button"
        style="@style/Button.Green"
        android:text="@string/update"
        />

    <include layout="@layout/toolbar"
        />

    <ScrollView
        android:id="@+id/profile_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/profile_update_button"
        android:layout_below="@id/toolbar"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/profile_credits_text"
                style="@style/TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="8dp"
                android:paddingLeft="@dimen/default_padding"
                android:paddingRight="@dimen/default_padding"
                android:paddingTop="4dp"
                android:text="@string/you_have_credits"
                android:textSize="@dimen/text_size_small"
                />

            <com.handybook.handybook.core.ui.widget.FullNameInputTextView
                android:id="@+id/profile_fullname_text"
                style="@style/EditText.FullName"
                android:layout_below="@id/profile_credits_text"
                />

            <com.handybook.handybook.core.ui.widget.EmailInputTextView
                android:id="@+id/profile_email_text"
                style="@style/EditText.Email"
                android:layout_below="@id/profile_fullname_text"
                />

            <LinearLayout
                android:id="@+id/profile_phone_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_email_text"
                >

                <TextView
                    android:id="@+id/profile_phone_prefix_text"
                    style="@style/EditText.Last"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

                <View
                    android:layout_width="1px"
                    android:layout_height="match_parent"
                    android:background="@color/cell_sep"
                    />

                <com.handybook.handybook.core.ui.widget.PhoneInputTextView
                    android:id="@+id/profile_phone_text"
                    style="@style/EditText.Last.Phone"
                    />

            </LinearLayout>

            <TextView
                android:id="@+id/profile_change_password_text"
                style="@style/TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_phone_layout"
                android:gravity="center"
                android:padding="@dimen/default_padding"
                android:text="@string/change_password"
                android:textSize="@dimen/text_size_small"
                />

            <com.handybook.handybook.core.ui.widget.PasswordInputTextView
                android:id="@+id/profile_old_password_text"
                style="@style/EditText.Password"
                android:layout_below="@id/profile_change_password_text"
                android:hint="@string/old_password"
                />

            <com.handybook.handybook.core.ui.widget.PasswordInputTextView
                android:id="@+id/profile_new_password_text"
                style="@style/EditText.Last.Password"
                android:layout_below="@id/profile_old_password_text"
                android:layout_marginBottom="@dimen/default_margin"
                android:hint="@string/new_password"
                />

            <com.handybook.handybook.library.ui.view.ThinIconButton
                android:id="@+id/profile_cancel_cleaning_plan_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_new_password_text"
                android:text="@string/cancel_recurring_booking_title"
                android:visibility="gone"
                custom:iconResourceId="@drawable/ic_calendar_dark"
                />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
