<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="nav_menu_home"
          type="id"/>
    <item name="nav_menu_profile"
          type="id"/>
    <item name="nav_menu_my_bookings"
          type="id"/>
    <item name="nav_menu_my_pro_team"
          type="id"/>
    <item type="id"
          name="nav_menu_history"/>
    <item name="nav_menu_free_cleanings"
          type="id"/>
    <item name="nav_menu_help"
          type="id"/>
    <item name="toolbar"
          type="id"/>
    <item name="nav_menu_log_in"
          type="id"/>
    <item name="action_button_reschedule_booking"
          type="id"/>
    <item name="action_button_edit_hours"
          type="id"/>
    <item name="action_button_skip_booking"
          type="id"/>
    <item name="action_button_cancel_booking"
          type="id"/>
    <item name="action_button_contact_phone"
          type="id"/>
    <item name="action_button_contact_text"
          type="id"/>
    <item name="edit_booking_extras_button"
          type="id"/>
</resources>
