...
    <string name="promotions_menu">Apply Promo Code</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="default_error_string">"Sorry, something went wrong. Please try again."</string>
    <string name="loading">Loading…</string>
    <string name="loading_error">There was an error loading.</string>
    <string name="rescheduling">Rescheduling…</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="facebook_app_id">381615805205781</string>
    <string name="or">or</string>
    <string name="log_out">Log Out</string>
    <string name="share_using">Share using…</string>
    <string name="my_bookings">My Bookings</string>
    <string name="message">Message</string>
    <string name="messages">Messages</string>
    <string name="edit_pro_team">Edit Pro Team</string>
    <string name="history">History</string>
    <string name="account">My Account</string>
    <string name="want_to_log_out">Are you sure you want to log out?</string>
    <string name="update">Update</string>
    <string name="you_have_credits">YOU HAVE&#160;&#160;#&#160;&#160;CREDITS</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="new_password_confirmation">Confirm New Password</string>
    <string name="new_password_confirmation_error">Passwords don\'t match</string>
    <string name="update_pwd_error">To update password you need to enter old and new passwords.</string>
    <string name="update_pwd_missing_input_error">Looks like you\'re missing something. Please enter all fields.</string>
    <string name="pwd_length_error">Your password must be at least 8 characters.</string>
    <string name="info_updated">Your information has been updated.</string>
    <string name="env_format"
            formatted="false"
        >%s: v%s (%s)</string>
    <string name="upcoming">Upcoming</string>
    <string name="past">Past</string>
    <string name="hours">Hours</string>
...
