<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/handy_bg"
    >

    <include layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:orientation="vertical"
            >

            <com.handybook.handybook.core.ui.widget.PasswordInputTextView
                android:id="@+id/profile_old_password_text"
                style="@style/EditText.Password"
                android:layout_marginBottom="@dimen/default_margin"
                android:hint="@string/old_password"
                />


            <com.handybook.handybook.core.ui.widget.PasswordInputTextView
                android:id="@+id/profile_new_password_text"
                style="@style/EditText.Last.Password"
                android:hint="@string/new_password"
                />

            <com.handybook.handybook.core.ui.widget.PasswordInputTextView
                android:id="@+id/profile_new_password_confirmation_text"
                style="@style/EditText.Last.Password"
                android:layout_marginBottom="@dimen/default_margin"
                android:hint="@string/new_password_confirmation"
                />

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/profile_password_update_button"
        style="@style/Button.Green"
        android:layout_alignParentBottom="true"
        android:text="@string/update"
        />

</RelativeLayout>
