...
                android:textAllCaps="true"
                android:textColor="@color/handy_tertiary_gray"
                android:textSize="@dimen/text_size_small"
                />

            <LinearLayout
                android:id="@+id/account_contact_info_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_list_entry"
                android:orientation="vertical"
                android:padding="@dimen/default_padding"
                >
...
                    android:textSize="@dimen/text_size_small"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/account_password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_list_entry"
                android:orientation="vertical"
                android:padding="@dimen/default_padding"
                >
...
