<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <include layout="@layout/toolbar"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/toolbar"
            android:background="@color/handy_bg"
            android:divider="@drawable/divider_gray"
            android:orientation="vertical"
            >

            <com.handybook.handybook.core.ui.widget.FullNameInputTextView
                android:id="@+id/contact_name_text"
                style="@style/EditText.FullName"
                android:drawableLeft="@drawable/ic_head_gray"
                android:drawablePadding="@dimen/default_padding"
                />

            <com.handybook.handybook.core.ui.widget.EmailInputTextView
                android:id="@+id/contact_email_text"
                style="@style/EditText.Email"
                android:drawableLeft="@drawable/ic_mail_gray"
                android:drawablePadding="@dimen/default_padding"
                />

            <com.handybook.handybook.core.ui.widget.PhoneInputTextView
                android:id="@+id/contact_phone_text"
                style="@style/EditText.Last.Phone"
                android:drawableLeft="@drawable/ic_phone_gray"
                android:drawablePadding="@dimen/default_padding"
                />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/contact_update_button"
        style="@style/Button.Green"
        android:layout_alignParentBottom="true"
        android:text="@string/account.update_information"
        />
</RelativeLayout>
