<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/bookings"
        android:enabled="true"
        android:icon="@drawable/ic_menu_bookings_inactive"
        android:title="@string/bottom_nav_item_bookings"
        app:showAsAction="ifRoom"
        />
    <item
...
