...
    android:layout_height="wrap_content"
    android:background="@color/handy_white"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:id="@+id/booking_item_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/booking_list_item_height"
        android:foreground="?attr/selectableItemBackground"
        android:padding="@dimen/default_padding"
        >

...
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/booking_item_image_icon"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/booking_item_title"
                style="@style/TextView.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                tools:text="Thursday, Sept 12"
                />
...
